--- a/package.json
+++ b/package.json
@@ -17,6 +17,7 @@
     "@tailwindcss/postcss": "^4.0.5",
     "esbuild": "0.25.2",
     "next": "^15.3.1",
+    "next-intl": "^4.3.4",
     "postcss": "^8.4.24",
     "react": "^19.0.0",
     "react-dom": "^19.0.0",
