--- a/package.json
+++ b/package.json
@@ -15,6 +15,7 @@
     "@acid-info/lsd-react": "^0.2.0-beta.4",
     "@next/bundle-analyzer": "^15.3.1",
     "@tailwindcss/postcss": "^4.0.5",
+    "clsx": "^2.1.1",
     "esbuild": "0.25.2",
     "next": "^15.3.1",
     "next-intl": "^4.3.4",
