--- a/.gitignore
+++ b/.gitignore
@@ -43,5 +43,5 @@ yarn-error.log*
 .env.test.local
 .env.production.local
 
-# Contentlayer
-.contentlayer
+# Content collections
+.content-collections
