--- a/package.json
+++ b/package.json
@@ -13,19 +13,31 @@
   },
   "dependencies": {
     "@acid-info/lsd-react": "^0.2.0-beta.4",
+    "@content-collections/mdx": "^0.2.2",
     "@faker-js/faker": "^9.9.0",
     "@next/bundle-analyzer": "^15.3.1",
     "@tailwindcss/postcss": "^4.0.5",
     "clsx": "^2.1.1",
     "esbuild": "0.25.2",
+    "mdast-util-toc": "^7.1.0",
     "next": "^15.3.1",
     "next-intl": "^4.3.4",
     "postcss": "^8.4.24",
     "react": "^19.0.0",
     "react-dom": "^19.0.0",
-    "tailwindcss": "^4.0.5"
+    "rehype-autolink-headings": "^7.1.0",
+    "rehype-pretty-code": "^0.14.1",
+    "remark": "^15.0.1",
+    "remark-code-import": "^1.2.0",
+    "remark-gfm": "^4.0.1",
+    "shiki": "^3.9.2",
+    "tailwind-merge": "^3.3.1",
+    "tailwindcss": "^4.0.5",
+    "unist-util-visit": "^5.0.0"
   },
   "devDependencies": {
+    "@content-collections/core": "^0.8.2",
+    "@content-collections/next": "^0.2.6",
     "@eslint/eslintrc": "^3.2.0",
     "@eslint/js": "^9.16.0",
     "@svgr/webpack": "^8.0.1",
