--- a/package.json
+++ b/package.json
@@ -4,7 +4,9 @@
   "private": true,
   "scripts": {
     "start": "next dev",
-    "dev": "next dev",
+    "dev": "concurrently \"next dev\" \"tsx worker/refreshWorker.ts\"",
+    "dev:next": "next dev",
+    "dev:worker": "tsx worker/refreshWorker.ts",
     "build": "next build",
     "serve": "next start",
     "analyze": "next build",
@@ -18,7 +20,10 @@
     "@faker-js/faker": "^9.9.0",
     "@next/bundle-analyzer": "^15.3.1",
     "@tailwindcss/postcss": "^4.0.5",
+    "@upstash/redis": "^1.35.3",
+    "bullmq": "^5.1.0",
     "clsx": "^2.1.1",
+    "concurrently": "^9.2.0",
     "esbuild": "0.25.2",
     "lru-cache": "^11.1.0",
     "mdast-util-toc": "^7.1.0",
@@ -28,6 +33,7 @@
     "postcss": "^8.4.24",
     "react": "^19.0.0",
     "react-dom": "^19.0.0",
+    "redis": "^5.0.0-next.3",
     "rehype-autolink-headings": "^7.1.0",
     "rehype-pretty-code": "^0.14.1",
     "remark": "^15.0.1",
@@ -43,6 +49,7 @@
     "@content-collections/next": "^0.2.6",
     "@eslint/eslintrc": "^3.2.0",
     "@eslint/js": "^9.16.0",
+    "@next/env": "^15.4.6",
     "@svgr/webpack": "^8.0.1",
     "@types/node": "22.15.17",
     "@types/react": "^19.0.8",
@@ -59,6 +66,7 @@
     "lint-staged": "^13.0.0",
     "prettier": "^3.0.0",
     "prettier-plugin-tailwindcss": "^0.6.11",
+    "tsx": "^4.20.4",
     "typescript": "^5.1.3",
     "vite-tsconfig-paths": "^5.1.4",
     "vitest": "^3.2.4"
