fix(deploy): vercel cron job

--- a/vercel.json
+++ b/vercel.json
@@ -2,11 +2,7 @@
   "crons": [
     {
       "path": "/api/cron/refresh",
-      "schedule": "0 0 * * *",
-      "data": {
-        "orgs": "acid-info,codex-storage,keycard-tech,logos-co,waku-org",
-        "onlyExcludeOrgs": "status-im,vacp2p"
-      }
+      "schedule": "10 15 * * *"
     }
   ]
 }
