--- a/vercel.json
+++ b/vercel.json
@@ -2,7 +2,7 @@
   "crons": [
     {
       "path": "/api/cron/refresh",
-      "schedule": "10 15 * * *"
+      "schedule": "*/10 * * * *"
     }
   ]
 }
