feat(contact-form): integrate rich text editor for message input and update form handling

--- a/package.json
+++ b/package.json
@@ -18,6 +18,10 @@
     "@faker-js/faker": "^9.9.0",
     "@next/bundle-analyzer": "^15.3.1",
     "@tailwindcss/postcss": "^4.0.5",
+    "@tiptap/extension-link": "^3.2.0",
+    "@tiptap/extension-underline": "^3.2.0",
+    "@tiptap/react": "^3.2.0",
+    "@tiptap/starter-kit": "^3.2.0",
     "clsx": "^2.1.1",
     "esbuild": "0.25.2",
     "lru-cache": "^11.1.0",
