--- a/package.json
+++ b/package.json
@@ -31,6 +31,7 @@
     "next-intl": "^4.3.4",
     "p-limit": "^6.2.0",
     "postcss": "^8.4.24",
+    "pino": "^9.9.0",
     "react": "^19.0.0",
     "react-dom": "^19.0.0",
     "redis": "^5.0.0-next.3",
