--- a/package.json
+++ b/package.json
@@ -33,9 +33,12 @@
     "postcss": "^8.4.24",
     "react": "^19.0.0",
     "react-dom": "^19.0.0",
+    "react-markdown": "^10.1.0",
     "rehype-autolink-headings": "^7.1.0",
     "rehype-pretty-code": "^0.14.1",
+    "rehype-raw": "^7.0.0",
     "remark": "^15.0.1",
+    "remark-breaks": "^4.0.0",
     "remark-code-import": "^1.2.0",
     "remark-gfm": "^4.0.1",
     "shiki": "^3.9.2",
