--- a/package.json
+++ b/package.json
@@ -18,6 +18,8 @@
     "@faker-js/faker": "^9.9.0",
     "@next/bundle-analyzer": "^15.3.1",
     "@tailwindcss/postcss": "^4.0.5",
+    "@tanstack/react-query": "^5.85.9",
+    "@tanstack/react-query-devtools": "^5.85.9",
     "@tiptap/extension-link": "^3.2.0",
     "@tiptap/extension-placeholder": "^3.2.0",
     "@tiptap/extension-underline": "^3.2.0",
