--- a/package.json
+++ b/package.json
@@ -28,7 +28,7 @@
     "esbuild": "0.25.2",
     "lru-cache": "^11.1.0",
     "mdast-util-toc": "^7.1.0",
-    "next": "^15.3.1",
+    "next": "15.3.6",
     "next-intl": "^4.3.4",
     "postcss": "^8.4.24",
     "react": "^19.0.0",
